Cleanup config class