@@ -1,7 +1,6 @@
 package com.tiji.media;
 
 import com.google.gson.Gson;
-import com.google.gson.JsonObject;
 import net.fabricmc.loader.api.FabricLoader;
 
 import java.io.IOException;
@@ -12,7 +11,6 @@ import java.nio.file.StandardOpenOption;
 public class MediaConfig {
     private String clientId = "";
     private String clientSecret = "";
-    private String accessToken = "";
     private String authToken = "";
     private String refreshToken = "";
     private long lastRefresh = 0;
@@ -28,9 +26,6 @@ public class MediaConfig {
 
     public String clientSecret() {return clientSecret;}
     public void clientSecret(String value) {clientSecret = value; writeToFile();}
-
-    public String accessToken() {return accessToken;}
-    public void accessToken(String value) {accessToken = value; writeToFile();}
 
     public String authToken() {return authToken;}
     public void authToken(String value) {authToken = value; writeToFile();}
@@ -59,51 +54,27 @@ public class MediaConfig {
     public int sampleSize() {return sampleSize;}
     public void sampleSize(int value) {sampleSize = value; writeToFile();}
 
-    public void generate() {
+    public static MediaConfig generate() {
         Path configPath = FabricLoader.getInstance().getConfigDir().resolve("media.json");
         if (Files.exists(configPath)) {
             try {
                 String json = Files.readString(configPath);
-                JsonObject config = new Gson().fromJson(json, JsonObject.class);
 
-                clientId =              config.get("clientId")          .getAsString();
-                clientSecret =          config.get("clientSecret")      .getAsString();
-                accessToken =           config.get("accessToken")       .getAsString();
-                authToken =             config.get("authToken")         .getAsString();
-                refreshToken =          config.get("refreshToken")      .getAsString();
-                lastRefresh =           config.get("lastRefresh")       .getAsLong();
-                shouldShowToasts =      config.get("shouldShowToasts")  .getAsBoolean();
-                imageIoThreadCount =    config.get("imageIoThreadCount").getAsByte();
-                brightnessFactor =      config.get("brightnessFactor")  .getAsInt();
-                saturationFactor =      config.get("saturationFactor")  .getAsInt();
-                targetBrightness =      config.get("targetBrightness")  .getAsInt();
-                sampleSize =            config.get("sampleSize")        .getAsInt();
-            }catch (Exception e) {
-                writeToFile();
+                return new Gson().fromJson(json, MediaConfig.class);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
             }
-        }else{
-            writeToFile(false);
+        } else {
+            return new MediaConfig();
         }
     }
     public void writeToFile(boolean delete) {
         Path configPath = FabricLoader.getInstance().getConfigDir().resolve("media.json");
 
-        JsonObject config = new JsonObject();
-        config.addProperty("clientId",              clientId);
-        config.addProperty("clientSecret",          clientSecret);
-        config.addProperty("accessToken",           accessToken);
-        config.addProperty("authToken",             authToken);
-        config.addProperty("refreshToken",          refreshToken);
-        config.addProperty("lastRefresh",           lastRefresh);
-        config.addProperty("shouldShowToasts",      shouldShowToasts);
-        config.addProperty("imageIoThreadCount",    imageIoThreadCount);
-        config.addProperty("brightnessFactor",      brightnessFactor);
-        config.addProperty("saturationFactor",      saturationFactor);
-        config.addProperty("targetBrightness",      targetBrightness);
-        config.addProperty("sampleSize",            sampleSize);
+        String config = new Gson().toJson(this);
 
         try {
-            Files.write(configPath, new Gson().toJson(config).getBytes(), delete ? StandardOpenOption.TRUNCATE_EXISTING : StandardOpenOption.CREATE_NEW);
+            Files.writeString(configPath, config, delete ? StandardOpenOption.TRUNCATE_EXISTING : StandardOpenOption.CREATE_NEW);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -111,18 +82,11 @@ public class MediaConfig {
     public void writeToFile() {
         writeToFile(true);
     }
-    public void reset() {
+    public void resetConnection() {
         this.lastRefresh(0);
         this.clientId("");
         this.clientSecret("");
-        this.accessToken("");
         this.authToken("");
         this.refreshToken("");
-        this.shouldShowToasts(true);
-        this.imageIoThreadCount((byte) 4);
-        this.brightnessFactor(20);
-        this.saturationFactor(5);
-        this.targetBrightness(70);
-        this.sampleSize(10);
     }
 }
